# QueryOptimizerIcatu

./: .gitignore  Dockerfile  README.md  optimization_metadata.json  pyproject.toml  test_run.sh
.github/workflows/: cd.yaml  ci.yaml  docker.yaml
examples/: aggregations.sql  basic_join.sql  big_test.sql  big_test_sqlite_optimization.json  complex_analytics.sql  cross_tab_analysis.sql  cte.sql  insert_select.sql  monthly_report.sql  multiple_joins.sql  result.sql  simple_select.sql  simple_select_sqlite_optimization.json  subquery.sql  unoptimized.sql  update.sql  window_function.sql
exemples/: big_test.sql  big_test_sqlite_optimization_result.json  result.sql
src/: conftest.py  main.py
src/config/: config.py
src/config/oci/: config  oci_genai_client.py
src/core/: client.py  interfaces.py  types.py
src/infra/: file_handler.py  metadata_repository.py
src/infra/tests/: test_file_handler.py  test_metadata_repository.py
src/services/: prompt_generator.py  query_optimizer.py
src/services/tests/: test_prompt_generators.py  test_query_optimizer.py
